# opengles3-book

./: CMakeLists.txt
Chapter_2/Hello_Triangle/: Hello_Triangle.c
Common/: CMakeLists.txt
Common/Source/: egl.c  egl.h  esUtil.c
Common/Source/LinuxGbmDrm/: common.h  esUtil_gbm_drm.c  main.c
Common/Source/LinuxGbmDrm/drm/: drm_atomic.c  drm_common.c  drm_prime.c
